--- a/Class/Javascript/Change Element/index.html
+++ b/Class/Javascript/Change Element/index.html
@@ -11,7 +11,7 @@
       padding: 3px;
     }
 
-    div{
+    div {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <div>
+  <div id="content">
     <h2>Its Cube Time!</h2>
     <img id="gambar"
       src="https://dicoding-web-img.sgp1.cdn.digitaloceanspaces.com/original/commons/homepage-dicoding-challenge-illustration.png"
@@ -43,6 +43,14 @@
         <button>Exit</button>
       </div>
     </div>
+  </div>
+  <hr size="2" width="95%" color="black">
+  <div id="links">
+    <p>Situs lainnya yang tidak kalah menarik:</p>
+    <ul>
+      <li><a href="http://www.dicoding.com" id="dicodingLink">Dicoding</a></li>
+      <li><a href="http://www.google.com" id="googleLink">Google</a></li>
+    </ul>
   </div>
 </body>
 
