--- a/Class/Javascript/Input Event/index.html
+++ b/Class/Javascript/Input Event/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <title>Form World</title>
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
