--- a/Project/bookshelf/index.html
+++ b/Project/bookshelf/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Bookshelf Apps</title>
+  <title>Book Database</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
         rel="stylesheet">
@@ -14,38 +14,38 @@
 
 <body>
 <header class="head_bar">
-  <h1 class="head_bar__title">Bookshelf Apps</h1>
+  <h1 class="head_bar__title">Book Database</h1>
 </header>
 <main>
   <section class="input_section">
-    <h2>Masukkan Buku Baru</h2>
+    <h2>Input Book</h2>
     <form id="inputBook">
       <div class="input">
-        <label for="inputBookTitle">Judul</label>
+        <label for="inputBookTitle">Title</label>
         <input id="inputBookTitle" type="text" required>
       </div>
       <div class="input">
-        <label for="inputBookAuthor">Penulis</label>
+        <label for="inputBookAuthor">Writer</label>
         <input id="inputBookAuthor" type="text" required>
       </div>
       <div class="input">
-        <label for="inputBookYear">Tahun</label>
+        <label for="inputBookYear">Year Published</label>
         <input id="inputBookYear" type="number" required>
       </div>
       <div class="input_inline">
-        <label for="inputBookIsComplete">Selesai dibaca</label>
+        <label for="inputBookIsComplete">Finish Reading</label>
         <input id="inputBookIsComplete" type="checkbox">
       </div>
-      <button id="bookSubmit" type="submit">Masukkan Buku ke rak <span>Belum selesai dibaca</span></button>
+      <button id="bookSubmit" type="submit">Input Book to <span>Database</span></button>
     </form>
   </section>
   
   <section class="search_section">
-    <h2>Cari Buku</h2>
+    <h2>Find Book</h2>
     <form id="searchBook">
-      <label for="searchBookTitle">Judul</label>
+      <label for="searchBookTitle">Title</label>
       <input id="searchBookTitle" type="text">
-      <button id="searchSubmit" type="submit">Cari</button>
+      <!-- <button id="searchSubmit" type="submit">Cari</button> -->
     </form>
   </section>
   
