--- a/Project/bookshelf/index.html
+++ b/Project/bookshelf/index.html
@@ -1,88 +1,74 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Book Database</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
-        rel="stylesheet">
+    rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<header class="head_bar">
-  <h1 class="head_bar__title">Book Database</h1>
-</header>
-<main>
-  <section class="input_section">
-    <h2>Input Book</h2>
-    <form id="inputBook">
-      <div class="input">
-        <label for="inputBookTitle">Title</label>
-        <input id="inputBookTitle" type="text" required>
-      </div>
-      <div class="input">
-        <label for="inputBookAuthor">Writer</label>
-        <input id="inputBookAuthor" type="text" required>
-      </div>
-      <div class="input">
-        <label for="inputBookYear">Year Published</label>
-        <input id="inputBookYear" type="number" required>
-      </div>
-      <div class="input_inline">
-        <label for="inputBookIsComplete">Finish Reading</label>
-        <input id="inputBookIsComplete" type="checkbox">
-      </div>
-      <button id="bookSubmit" type="submit">Input Book to <span>Database</span></button>
-    </form>
-  </section>
-  
-  <section class="search_section">
-    <h2>Find Book</h2>
-    <form id="searchBook">
-      <label for="searchBookTitle">Title</label>
-      <input id="searchBookTitle" type="text">
-      <!-- <button id="searchSubmit" type="submit">Cari</button> -->
-    </form>
-  </section>
-  
-  <section class="book_shelf">
-    <h2>Belum selesai dibaca</h2>
-    <div id="incompleteBookshelfList" class="book_list">
-<!--      <article class="book_item">-->
-<!--        <h3>Book Title</h3>-->
-<!--        <p>Penulis: John Doe</p>-->
-<!--        <p>Tahun: 2002</p>-->
-<!--    -->
-<!--        <div class="action">-->
-<!--          <button class="green">Selesai dibaca</button>-->
-<!--          <button class="red">Hapus buku</button>-->
-<!--        </div>-->
-<!--      </article>-->
-    </div>
-  </section>
-  
-  <section class="book_shelf">
-    <h2>Selesai dibaca</h2>
-    <div id="completeBookshelfList" class="book_list">
-<!--      <article class="book_item">-->
-<!--        <h3>Book Title</h3>-->
-<!--        <p>Penulis: John Doe</p>-->
-<!--        <p>Tahun: 2002</p>-->
-<!--        -->
-<!--        <div class="action">-->
-<!--          <button class="green">Belum selesai di Baca</button>-->
-<!--          <button class="red">Hapus buku</button>-->
-<!--        </div>-->
-<!--      </article>-->
-    </div>
-  </section>
-</main>
+  <header class="page-title">
+    <div> <!-- placeholder --> </div>
+    <h1 class="page-title-text">Book Database</h1>
+    <div> <!-- placeholder--> </div>
+  </header>
 
-<script src="script.js"></script>
+  <main>
+    <section class="input-section card">
+      <h2>Input Book</h2>
+      <form id="inputBook">
+        <div class="input">
+          <label for="inputBookTitle">Title</label>
+          <input id="inputBookTitle" type="text" required>
+        </div>
+        <div class="input">
+          <label for="inputBookAuthor">Writer</label>
+          <input id="inputBookAuthor" type="text" required>
+        </div>
+        <div class="input">
+          <label for="inputBookYear">Year Published</label>
+          <input id="inputBookYear" type="number" required>
+        </div>
+        <div class="input-checkbox">
+          <label for="inputBookIsComplete">Finish Reading</label>
+          <input id="inputBookIsComplete" type="checkbox">
+        </div>
+        <button id="bookSubmit" type="submit">Input Book </button>
+      </form>
+    </section>
+
+    <section class="search-section card">
+      <h2>Find Book</h2>
+      <form id="searchBook">
+        <label for="searchBookTitle">Title</label>
+        <input id="searchBookTitle" type="text">
+      </form>
+    </section>
+
+    <section class="book-shelf card">
+      <h2>Unread</h2>
+      <div id="incompleteBookshelfList" class="book-list">
+        <!-- placeholder -->
+      </div>
+    </section>
+
+    <section class="book-shelf card">
+      <h2>Read</h2>
+      <div id="completeBookshelfList" class="book-list">
+        <!-- placeholder -->
+      </div>
+    </section>
+  </main>
+
+  <script src="script.js"></script>
 
 </body>
+
 </html>
